# sitcom-character-styles

./: .gitignore  DEPLOYMENT.md  README.md  __init__.py  pyproject.toml
characters/: __init__.py  sitcom_character_categorical.yaml
characters/endora/: __init__.py
characters/endora/olog/: categorical.yaml  intentionality.yaml
characters/endora/src/: endora_operator.py  prompt_enhancement.py
characters/endora/tests/: test_mcp_server.py
framework/core/: continuous_deformation.py  intentionality.yaml  olog_loader.py
mcp_server/: __init__.py  server.py
sitcom_character_styles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
